# OpenGL_Experiments

./: CMakeLists.txt  Life-Lessons  README.md  main.cpp
.cmake/api/v1/reply/: cache-v2-0e864bb405a5d67084eb.json  cmakeFiles-v1-814349465e0049546893.json  codemodel-v2-bdfdd747c581f0515063.json  directory-libraries.glfw-Debug-e784ff8757e4b81de2cd.json  directory-libraries.glfw.src-Debug-43b829e81c53052ce22d.json  index-2024-10-27T15-52-29-0184.json  target-FinalDayOnEarth-Debug-2a357b113636ec54acaf.json  target-boing-Debug-c49341559e614050caaa.json  target-clipboard-Debug-ea90c19a80f9e55f3a0b.json  target-events-Debug-9fce044dfec493e996dc.json  target-gamma-Debug-fc56c0e62bdc6a785446.json  target-glfw-Debug-7ba1b4ae6c3451538a0d.json  target-icon-Debug-d8d177c02ce620ea982f.json  target-inputlag-Debug-632c9952d91c8b7d193b.json  target-joysticks-Debug-fbe6e267be022944f11f.json  target-monitors-Debug-47726d06f70ad2c93a78.json  (+7 more)
Other/: FontManager.h  renderer.h
Other/ModelReFormatter/: ModelResizer.cpp  main.cpp
archive/: GrassChunk.cpp  GrassChunk.h  Input.cpp  LocationRenderer.cpp  LocationRenderer.h  Tile.cpp  Tile.h
archive/Base/: Component.h  ContiguousMemoryStorage.h  Process.cpp  Process.h  ProcessScheduler.cpp  ProcessScheduler.h  RecurentProcess.cpp  RecurentProcess.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glfw/docs/: CONTRIBUTING.md  compile.dox  input.dox  window.dox
resources/Entities/: Ball.json  Dog.json
resources/models/: models.json
resources/models/Airplane/: Airplane.AMG  Burned_Truck_Map.AMG
resources/models/Alphabet/: X.AMG
resources/models/Crate/: Crate1.AMG
resources/models/Rock/: Rock.AMG
resources/models/Skull/: Skull.AMG
resources/models/cap/: cap.AMG
resources/models/car/: car.AMG
resources/models/pine-tree/: pine-tree.AMG
resources/models/sedan/: sedan.AMG
resources/shaders/: shaders.json
resources/shaders/basic/: 3d.frag  3d.vert  Grass.frag  Grass.vert  MassModelShader.frag  MassModelShader.vert  ModelShader.frag  ModelShader.vert  basic.frag  occlude.frag  occlude.vert
resources/shaders/compute/: cull.comp  grass.comp  occlusion.comp  setMeshCounts.comp
resources/shaders/geometry/: Terrain.frag  Terrain.tesc  Terrain.tese  Terrain.vert  normals.tesc  normals.vert
src/GUI/: FontManager.h  GUIRenderer.cpp  GUIRenderer.h
src/Game/Base/: GameState.cpp  GameState.h
src/Game/Entity/: EntityComponentStorage.h  EntityComponents.h  EntityLoader.cpp  EntityLoader.h  Future_Version_EntityComponentStorage.h  Player.h
src/Game/Location/: Location.cpp  Location.h  LocationGenerator.cpp  LocationGenerator.h  LocationState.cpp  LocationState.h  PlayerController.cpp  PlayerController.h
src/Game/Systems/: EntityPhysicsSystem.cpp  EntityPhysicsSystem.h  LocationSystem.h
src/Rendering/: Buffer.h  LocationRenderer.cpp  LocationRenderer.h  MassModelRenderer.cpp  MassModelRenderer.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  OpenGLStructures.h  RenderUtil.cpp  RenderUtil.h  Shader.cpp  Shader.h  TerrainRenderer.cpp  TerrainRenderer.h  Texture.cpp  Texture.h  Texture3D.cpp  Texture3D.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshTEX.cpp  TriangleMeshTEX.h  Vertices.h  Window.cpp  Window.h  shapeRenderer.h
src/Rendering/Studio/: ModelCapture.cpp  ModelCapture.h
src/Scene/: Camera.cpp  Camera.h  QuadTree.cpp  QuadTree.h  Terrain.cpp  Terrain.h
src/Utility/: Input.h  InputManager.cpp  InputManager.h  JsonReader.cpp  JsonReader.h  Keybind.cpp  Keybind.h  MathUtil.h  PerlinNoise.cpp  PerlinNoise.h  Resource.h  ResourceLoader.cpp  ResourceLoader.h  TextureUtil.cpp  TextureUtil.h
(+3 files in other folders)
